--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>MindUI</title>
+        <title>pixabay-image-api-react-example</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <!-- <link href="/images/favicon.ico" rel="shortcut icon" type="image/x-icon"> -->
